Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,6 +210,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def restaurant_name(restaurant):\n",
+    "    restaurant_name.\n",
+    "\n",
     "restaurant_name(frontier_restaurant) # 'Frontier Restaurant'"
    ]
   },
