Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -200,8 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def restaurant_name(restaurant):\n",
-    "    restaurant_name."
+    "restaurant_name.(key)"
    ]
   },
   {
