--- a/index.ipynb
+++ b/index.ipynb
@@ -196,23 +196,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'dict' object has no attribute 'Name'",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-10-613eca288147>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-bd61827dcefd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfrontier_restaurant\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mName\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'Name'"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-613eca288147>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    frontier_restaurant.Name[]\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "frontier_restaurant.Name()"
+    "frontier_restaurant.Name[]"
    ]
   },
   {
