--- a/index.ipynb
+++ b/index.ipynb
@@ -211,6 +211,10 @@
     }
    ],
    "source": [
+    "def restaurant_name(restaurant):\n",
+    "    restaurant_name\n",
+    "\n",
+    "\n",
     "frontier_restaurant['name']"
    ]
   },
@@ -220,8 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def restaurant_name(restaurant):\n",
-    "    restaurant_name.\n",
+    "\n",
     "\n",
     "restaurant_name(frontier_restaurant) # 'Frontier Restaurant'"
    ]
