Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
    ],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    restaurant[]\n",
+    "    return restaurant['name']\n",
     "\n",
     "\n",
     "frontier_restaurant['name']"
