Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,26 +196,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Frontier Restaurant'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def restaurant_name(restaurant):\n",
-    "    return restaurant['name']\n",
-    "\n",
-    "\n",
-    "frontier_restaurant['name']"
+    "    return restaurant['name']"
    ]
   },
   {
@@ -224,8 +210,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "restaurant_name(frontier_restaurant) # 'Frontier Restaurant'"
    ]
   },
