--- a/index.ipynb
+++ b/index.ipynb
@@ -317,12 +317,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_better(restaurant, alternative):\n",
-    "    return restaurant['rating']> "
+    "    return restaurant['rating']>alternative['rating'] "
    ]
   },
   {
